edit the videos

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                                     </div>
                                 </div>
                                 <a href="https://jana-eskeef.github.io/SportifyProject/">
-                                    <figure class="i js-Lazyload"  data-hires="true" role="presentation">
-                                        <video   data-image="" class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
+                                    <figure class="i js-Lazyload" data-image="" data-hires="true" role="presentation">
+                                        <video    class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
                                             <source class="vid" src="video/Tab-SPORTIFY.mp4"/>
                                         </video>
                                     </figure>
@@ -76,8 +76,8 @@
                                     </div>
                                 </div>
                                 <a href="https://jana-eskeef.github.io/bootstrapEduportalProject/">
-                                    <figure class="i js-Lazyload"  data-hires="true" role="presentation">
-                                        <video   data-image="" class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
+                                    <figure class="i js-Lazyload" data-image="" data-hires="true" role="presentation">
+                                        <video    class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
                                             <source src="video/EduPortaL.mp4"/>
                                         </video>
                                     </figure>
@@ -94,8 +94,8 @@
                                     </div>
                                 </div>
                                 <a href="https://jana-eskeef.github.io/CRUDProjdect/">
-                                    <figure class="i js-Lazyload"  data-hires="true" role="presentation">
-                                        <video    data-image="" class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
+                                    <figure class="i js-Lazyload" data-image="" data-hires="true" role="presentation">
+                                        <video     class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
                                             <source src="video/CRUD.mp4"/>
                                         </video>
                                     </figure>
@@ -112,8 +112,8 @@
                                     </div>
                                 </div>
                                 <a href="https://jana-eskeef.github.io/ComingSoonLandingPage/">
-                                    <figure class="i js-Lazyload"  data-hires="true" role="presentation">
-                                        <video   data-image="" class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
+                                    <figure class="i js-Lazyload" data-image="" data-hires="true" role="presentation">
+                                        <video    class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
                                             <source src="video/Tab-We-are-Coming-Soon (1).mp4"/>
                                         </video>
                                     </figure>
