--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
                             <article class="Work">
                                 <div class="j">
                                     <h3 class="m">
+                                    RiazerTranslateChatbot<div class="l"></div>
+                                    </h3>
+                                    <p class="k"> a front-end React interface for an AI chat bot,It includes a sign-in page and a home page for interacting with the chat bot. Additionally, the application leverages the Google Translate API to support multiple languages.</p>
+                                    <div class="n">
+                                        <a class="o" href="https://razer-task-chat-bot.vercel.app/">View demo</a>
+                                    </div>
+                                </div>
+                                <a href="https://jana-eskeef.github.io/SportifyProject/">
+                                    <figure class="i js-Lazyload" data-image="" data-hires="true" role="presentation">
+                                        <video    class="Work-video" preload="metadata" playsinline="playsinline" webkit-playsinline="webkit-playsinline" loop="loop" muted="muted">
+                                            <source class="vid" src="video/Amaizo.mp4"/>
+                                        </video>
+                                    </figure>
+                                </a>
+                            </article>
+                            <article class="Work">
+                                <div class="j">
+                                    <h3 class="m">
                                         Sportify<div class="l"></div>
                                     </h3>
                                     <p class="k">Revolutionizing exercise through digital innovation, ensuring a dynamic and responsive platform for a healthy lifestyle</p>
